updates size of info icon in and fixes spacing

--- a/client/stylesheets/event-icons.import.styl
+++ b/client/stylesheets/event-icons.import.styl
@@ -74,7 +74,7 @@ transmissionIcons = {
   &::before 
     vertical-align top
     color #999
-    font-size 80%
+    font-size 90%
 
 .reference
   margin-right 8px
