--- a/client/stylesheets/event.import.styl
+++ b/client/stylesheets/event.import.styl
@@ -4,9 +4,9 @@
   margin-bottom 20px
 
 .fact-sheet-wrap
+  padding 20px 0 0 0
   background secondary-light
   padding-bottom 20px
-  margin-bottom 30px
 
 .event-head
   h1
@@ -56,6 +56,8 @@
   margin 20px 0
   margin-bottom 40px
   border-top table-border
+  &:last-of-type
+    margin-bottom 0
   th, td
     width 33%
     text-align center
